<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_back">

    <include layout="@layout/mtoolbar" />

    <ScrollView
        android:id="@+id/svL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="8dp"
            android:gravity="right"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/myProfile_photoLikes"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/user"  />

            <com.idpz.bazarayesh.Views.mEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/layout_corners_shape"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:paddingRight="16dp"
                android:textColor="@color/dark" />

            <com.idpz.bazarayesh.Views.mEditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/layout_corners_shape"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="textPersonName"
                android:paddingRight="16dp"
                android:textColor="@color/dark" />

            <com.idpz.bazarayesh.Views.mEditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/layout_corners_shape"
                android:ems="10"
                android:hint="آدرس:"
                android:inputType="textPersonName"
                android:paddingRight="16dp"
                android:textColor="@color/dark" />

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:background="@color/grey_60" />-->

            <com.idpz.bazarayesh.Views.mTextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/beautyshop"
                android:text="@string/barber_shop"
                android:gravity="center"
                android:background="@drawable/layout_corners_shape_transparent"
                android:textColor="@color/white"
                android:textSize="18dp" />







            <com.idpz.bazarayesh.Views.mTextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/shop"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/layout_corners_shape_transparent"

                android:textSize="18dp" />



            <com.idpz.bazarayesh.Views.mTextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/teacher"
                android:gravity="center"
android:layout_marginBottom="16dp"
                android:background="@drawable/layout_corners_shape_transparent"
                android:textColor="@color/white"
                android:textSize="18dp" />


            <com.idpz.bazarayesh.Views.mTextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/hairdresser"
                android:gravity="center"
                android:background="@drawable/layout_corners_shape_transparent"

                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>